Alignment fixes

--- a/app/assets/stylesheets/cb_stem/components/_filters.scss
+++ b/app/assets/stylesheets/cb_stem/components/_filters.scss
@@ -39,6 +39,8 @@
     border: 0;
     border-radius: 0;
     @include box-shadow(none);
+
+    .header_action .btn { padding: 0; }
   }
 
   .card-header {
@@ -57,7 +59,7 @@
 
   .card-header,
   .card-body {
-    padding: $spacer 1.5 * $spacer;
+    padding: $spacer 1.25 * $spacer;
   }
 
   label { display: block; }
